# InputSimulatorCpp

./: .gitignore  CMakeLists.txt  README.md  README.zh-cn.md
CMake/: CheckCMakeVersion.cmake  DebugMode.cmake  FindInputSimulator.cmake
Doc/Dev/macOS/: mac-keycodes.txt
Example/: CMakeLists.txt
Example/include/: library.hpp
Example/src/: library.cpp  main.cpp
InputSimulatorCpp/: CMakeLists.txt
InputSimulatorCpp/include/InputSimulator/: KeyboardKeyCode.hpp  xInputSimulator.hpp
InputSimulatorCpp/include/InputSimulator/Common/: xInputSimulatorImpl.hpp
InputSimulatorCpp/include/InputSimulator/Platform/Linux/: KeyboardKeyCodeLinux.hpp  LinuxMappingToWindowsVK.hpp  xInputSimulatorImplLinux.hpp
InputSimulatorCpp/include/InputSimulator/Platform/Windows/: KeyboardKeyCodeWindows.hpp  WindowsKeyboardExtra.hpp  xInputSimulatorImplWindows.hpp
InputSimulatorCpp/include/InputSimulator/Platform/macOS/: HIToolbox.Events.KeyCode.hpp  KeyboardKeyCodeMacOS.hpp  MacOSMappingToWindowsVK.hpp  MacOSNativeKeyboardKeyCode.hpp  MacOsNativeKeyboardKeyCode.hpp  xInputSimulatorImplMacOS.hpp
InputSimulatorCpp/include/InputSimulator/Utils/: TimeSleep.hpp
InputSimulatorCpp/src/: KeyboardKeyCode.cpp  NotImplementedException.cpp  library.cpp  library.hpp  main.cpp  xInputSimulator.cpp  xInputSimulator.hpp
InputSimulatorCpp/src/Common/: xInputSimulatorImpl.cpp  xInputSimulatorImpl.hpp
InputSimulatorCpp/src/Linux/: xInputSimulatorImplLinux.cpp  xInputSimulatorImplLinux.hpp
InputSimulatorCpp/src/Platform/Linux/: xInputSimulatorImplLinux.cpp  xInputSimulatorImplLinux.hpp
InputSimulatorCpp/src/Platform/Windows/: WindowsKeyboardExtra.cpp  xInputSimulatorImplWindows.cpp  xInputSimulatorImplWindows.hpp
InputSimulatorCpp/src/Platform/macOS/: xInputSimulatorImplMacOS.cpp  xInputSimulatorImplMacOS.hpp
InputSimulatorCpp/src/Utils/: NotImplementedException.cpp  NotImplementedException.hpp  TimeSleep.cpp
InputSimulatorCpp/src/Windows/: WindowsKeyboardExtra.cpp  WindowsKeyboardExtra.hpp  xInputSimulatorImplWin.cpp  xInputSimulatorImplWin.hpp
InputSimulatorCpp/src/macOS/: xInputSimulatorImplMacOS.cpp  xInputSimulatorImplMacOS.hpp
